discussion/kv_engine/101602/101602_rev7_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-30041 Move mctimings to modern json

Change-Id: Ic31c9a2eb12ccdd5a00861b817797803096b62b0

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2018-11-13 10:47:35.000000000
Message: 
Uploaded patch set 7.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2018-11-13 11:32:06.000000000
Message: 
Patch Set 7: Verified+1

Build Successful 

http://cv.jenkins.couchbase.com/job/kv-engine-cv-perf/5527/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/13775/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-threadsanitizer-master/5240/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-linux-master/13294/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-ASan-UBSan-master/3019/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/12004/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format/12341/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2018-11-13 15:05:42.000000000
Message: 
Patch Set 7: Code-Review-1

(1 comment)
Line:22, protocol/connection/client_mcbp_commands.h -> What's the reason why you can't use json_fwd here?

----------------------------------------------------------------------------------------------------------------------
Author: Richard de Mellow
Date: 2018-11-13 15:43:23.000000000
Message: 
Patch Set 7:

(4 comments)
Line:22, protocol/connection/client_mcbp_commands.h -> Without the full include, when building we get this error.

/Users/richarddemellow/source/couchbase/kv_engine/protocol/connection/client_mcbp_commands.h:630:20: error: implicit instantiation of undefined template 'nlohmann::basic_json<std::map, std::vector, std::__1::basic_string<char>, bool, long long, unsigned long long, double, std::allocator, adl_serializer>'
    nlohmann::json timings;
                   ^
/Users/richarddemellow/source/couchbase/build/tlm/deps/json.exploded/include/nlohmann/json_fwd.hpp:37:7: note: template is declared here
class basic_json;
      ^
/Users/richarddemellow/source/couchbase/kv_engine/protocol/connection/client_mcbp_commands.cc:1183:22: error: cannot initialize object parameter of type 'BinprotResponse' with an expression of type 'BinprotGetCmdTimerResponse'
    BinprotResponse::assign(std::move(buf));
                     ^~~~~~
/Users/richarddemellow/source/couchbase/kv_engine/protocol/connection/client_mcbp_commands.cc:1184:9: error: cannot initialize object parameter of type 'const BinprotResponse' with an expression of type 'BinprotGetCmdTimerResponse'
    if (isSuccess()) {
        ^~~~~~~~~
/Users/richarddemellow/source/couchbase/kv_engine/protocol/connection/client_mcbp_commands.cc:1186:45: error: cannot initialize object parameter of type 'const BinprotResponse' with an expression of type 'BinprotGetCmdTimerResponse'
            timings = nlohmann::json::parse(getDataString());
                                            ^~~~~~~~~~~~~
4 errors generated.

----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2018-11-13 16:04:35.000000000
Message: 
Patch Set 7:

(1 comment)
Line:22, protocol/connection/client_mcbp_commands.h -> Is that with #include <json.hpp> in the .cc ?

----------------------------------------------------------------------------------------------------------------------
Author: Richard de Mellow
Date: 2018-11-13 16:22:30.000000000
Message: 
Patch Set 7:

(1 comment)
Line:22, protocol/connection/client_mcbp_commands.h -> Yes when #include <nlohmann/json_fwd.hpp> is included in client_mcbp_commands.cc

----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2018-11-13 16:23:47.000000000
Message: 
Patch Set 7:

(1 comment)
Line:22, protocol/connection/client_mcbp_commands.h -> So we'll need the full header (json.hpp) in client_mcbp_commands.cc; and json_fwd.hpp in client_mcbp_commands.h

----------------------------------------------------------------------------------------------------------------------
Author: Richard de Mellow
Date: 2018-11-13 16:41:27.000000000
Message: 
Patch Set 7:

(1 comment)
Line:22, protocol/connection/client_mcbp_commands.h -> Just to clarify that those error messages are being produced when #include <nlohmann/json.hpp> is included in client_mcbp_command.cc and #include <nlohmann/json_fwd.hpp> is included in client_mcbp_command.h.

I think its course by the fact that its not able to resolve the template type of timings without the full header. "error: implicit instantiation of undefined template 'nlohmann::basic_json<std::map, std::vector, std::__1::basic_string<char>, bool, long long, unsigned long long, double, std::allocator, adl_serializer>'
    nlohmann::json timings;"

----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2018-11-14 09:48:29.000000000
Message: 
Patch Set 7: Code-Review+2

(1 comment)
Line:344, programs/mctimings/mctimings.cc -> prefer auto

----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2018-11-14 12:07:40.000000000
Message: 
Removed Code-Review-1 by Dave Rigby <daver@couchbase.com>

----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2018-11-14 12:07:53.000000000
Message: 
Patch Set 7: Code-Review+2
----------------------------------------------------------------------------------------------------------------------
